fixed alignment issues, touched up footer, added to about me modal

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,7 +86,7 @@
 
 @media screen and (max-width: 991px) and (max-height: 530px) {
   .first-screen-box .main-avatar {
-    display: inline-block; } }
+    display: block; } }
 
 @media screen and (max-width: 991px) and (max-height: 450px) {
   .first-screen-box .main-avatar {
@@ -143,16 +143,16 @@
   .first-screen-box .about-me .opacity-box {
     display: none; } }
 
-@media screen and (max-width: 360px) and (max-height: 620px) {
+/*@media screen and (max-width: 360px) and (max-height: 620px) {
   .first-screen-box .main-avatar {
-    display: none; } }
+    display: none; } }*/
 
 @media screen and (max-width: 360px) and (max-height: 500px) {
   .first-screen-box .about-me .opacity-box {
     display: none; } }
 
 /* Media max-width */
-@media screen and (max-width: 526px) {
+@media screen and (max-width: 767px) {
   .main-avatar {
     display: block; } }
 
